--- a/style.css
+++ b/style.css
@@ -67,6 +67,21 @@ main.cards {
   color: #333;
 }
 
+#rund {
+  background: #b1e5bc;
+  border-left: 6px solid #ec2a2a; 
+}
+
+#fern {
+  background: #89c28f;
+  border-left: 6px solid #b7ff69; 
+}
+
+#rad {
+  background: #6d967d;
+  border-left: 6px solid #10a45d; 
+}
+
 .card:hover {
   background: #e0f0e0;
 }
