--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(card.css);
 * {
   margin: 0;
   padding: 0;
@@ -39,7 +40,7 @@ header {
   justify-content: space-around;
   align-items: center;
   list-style: none;
-  padding: 0.5rem;
+  padding: 1rem;
   border-bottom: 3px solid #f3f0e3;
 }
 .navbar ul a {
@@ -50,15 +51,43 @@ header {
 nav a:hover {
   text-decoration: underline;
 }
+.search-form {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 
-main.cards {
+.search-form input {
+  padding: 0.4rem 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-form button {
+  background-color: #b1e5bc;
+  border: none;
+  /* color: white; */
+  font-size: 1rem;
+  padding: 0.4rem 0.6rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.search-form button:hover {
+  background: #10a45d;
+  color: #fff;
+}
+
+/* main.cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem;
   padding: 2rem;
-}
+} */
 
-.card {
+/* .card {
   background: white;
   padding: 1.5rem;
   border-radius: 10px;
@@ -66,9 +95,9 @@ main.cards {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-decoration: none;
   color: #333;
-}
+} */
 
-#rund {
+/* #rund {
   background: #b1e5bc;
   border-left: 6px solid #ec2a2a;
 }
@@ -85,7 +114,8 @@ main.cards {
 
 .card:hover {
   background: #e0f0e0;
-}
+} */
+
 footer {
   text-align: center;
   background-color: #184f02;
@@ -95,4 +125,7 @@ footer {
   left: 0;
   width: 100%;
   height: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
