--- a/card.css
+++ b/card.css
@@ -27,7 +27,7 @@ main {
 }
 .cards .card .face.face1 p {
   color: #2c2c2c;
-  padding: 1em;
+  padding: 0.5em;
 }
 
 .cards .card .face.face2 {
@@ -38,13 +38,13 @@ main {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  box-sizing: border-box;
+  padding: 20px;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 
 .cards .card:hover .face.face2 {
-  transform: translateY(-35px);
+  transform: translateY(-45px);
 }
 .cards .card .face.face2 .content {
   width: 100%;
@@ -68,8 +68,5 @@ main {
   justify-self: flex-end;
 }
 .cards .card .face.face2 .content .more a {
-  border: 2px solid #2c2c2c;
-}
-.cards .card:hover .face.face2 .content .more a {
   border: 2px solid #10a45d;
 }
