--- a/fernwanderweg.css
+++ b/fernwanderweg.css
@@ -51,7 +51,6 @@ nav a:hover {
   text-decoration: underline;
 }
 
-
 footer {
   text-align: center;
   background-color: #184f02;
@@ -64,7 +63,6 @@ footer {
 }
 
 .info-section {
- 
   display: flex;
   flex-wrap: wrap;
   padding: 2rem;
@@ -76,7 +74,7 @@ footer {
   min-width: 200px;
   border: 1px solid #1c8146d3;
   padding: 1rem;
-  background-color: #f3f0e0;;
+  background-color: #f3f0e0;
 }
 
 .map {
